force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <formula>Solicitud_de_Pickup__r.Contacto_Remitente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cliente</label>
    <type>Text</type>
</CustomField>