force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <formula>Solicitud_de_Pickup__r.Direccion_Remitente__r.Direccion__c&amp;&quot; &quot;&amp;Solicitud_de_Pickup__r.Direccion_Remitente__r.Ciudad__c&amp;&quot; &quot;&amp; Solicitud_de_Pickup__r.Direccion_Remitente__r.Estado_Provincia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>