force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Estado_Paquete__c.field-meta.xml
<CustomField>
    <fullName>Estado_Paquete__c</fullName>
    <label>Estado Paquete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En ruta</fullName>
            </value>
            <value>
                <fullName>Pendiente</fullName>
            </value>
            <value>
                <fullName>Entregado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>