force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Peso__c.field-meta.xml
<CustomField>
    <fullName>Peso__c</fullName>
    <formula>Solicitud_de_Pickup__r.Peso_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Peso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>