force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Piezas__c.field-meta.xml
<CustomField>
    <fullName>Piezas__c</fullName>
    <formula>Solicitud_de_Pickup__r.Cantidad_de_Paquetes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Piezas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>