force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Ruta__c.field-meta.xml
<CustomField>
    <fullName>Ruta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta</label>
    <referenceTo>Ruta__c</referenceTo>
    <relationshipLabel>Importaciones Agente</relationshipLabel>
    <relationshipName>Solicitudes_Pickup_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>