force-app/main/default/objects/Solicitudes_Pickup_Despacho__c/fields/Solicitud_de_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Pickup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Importación Agente</label>
    <referenceTo>Solicitud_de_Pickup__c</referenceTo>
    <relationshipLabel>Ruta</relationshipLabel>
    <relationshipName>Solicitudes_Pickup_Despacho</relationshipName>
    <type>Lookup</type>
</CustomField>